test/compile-fail/scope/use-renamed/top.rhdl
mod a {
    pub mod b {
        use c::d as e;
        mod c {
            pub struct d {}
        }
    }
}

use a::b::d;
